  it comes to bootclasspath handling), then the bootclasspath of the
  VM running Ant will be added to the bootclasspath you've specified.

* The Reference class now has a project field that will get
  used (if set) in preference to the passed in project, when
  dereferencing the reference.
  Bugzilla Report 25777.

Fixed bugs:
-----------

* Translate task does not remove tokens when a key is not found.
  It logs a verbose message.  Bugzilla Report 13936.

* Incorrect task name with invalid "javac" task after a "presetdef.
  Bugzilla reports 31389 and 29499.
  
* <manifest> was not printing warnings about invalid manifest elements.
  Bugzilla report 32190

* <replace> got out of memory on large files (part of report 32566). 
  <replace> can now handle files as long as there is enough disk space
  available.

Other changes:
--------------

* <echoproperties> now (alphanumerically) sorts the property list
  before echoing, when you request XML output (format="xml"). 

* A new base class DispatchTask has been added to facilitate elegant 
  creation of tasks with multiple actions.

* Major revision of <wsdltodotnet>. Supports mono wsdl and the microsoft
  wsdl run on mono, as well as most of the .NET WSE2.0 options. Extra
  schemas (files or urls) can be named in the <schema> element.
  Compilers can be selected using the compiler attribute, which defaults
  to "microsoft" on windows, and "mono" on everything else.

* It is now possible to specify the pattern created/parsed by <checksum>.
  Bugzilla Report 16539.

* Added -nouserlib option to allow running ant without automatically loading
  up ${user.dir}/.lib/ant. This is useful when compiling ant, and antlibs.
  Modified the build.sh and build.bat to use the option.

* Added -noclasspath option to allow running ant WITHOUT using CLASSPATH env
  variable. Modified ant.bat to do this so that %CLASSPATH% is not looked at.

* Added a new "failall" value for the onerror attribute of <typedef>.
  Bugzilla report 31685.
