@@ -24,6 +24,10 @@ Changes that could break older environments:
 Fixed bugs:
 -----------
 
+* Programs run with <java fork="true"> can now accept standard input
+  from the Ant console.  (Programs run with <java fork="false"> could
+  already do so.)  Bugzilla Report 24918.
+
 * Translate task does not remove tokens when a key is not found.
   It logs a verbose message.  Bugzilla Report 13936.
 
